[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/App.gd" type="Script" id=1]
[ext_resource path="res://src/BingHelp.tscn" type="PackedScene" id=2]

[sub_resource type="InputEventAction" id=1]
action = "refresh"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="App" type="Node"]
script = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VSplitContainer" type="VSplitContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VSplitContainer"]
margin_right = 1024.0
margin_bottom = 24.0

[node name="MenuButton" type="MenuButton" parent="UI/VSplitContainer/HBoxContainer"]
margin_right = 48.0
margin_bottom = 24.0
text = "Menu"

[node name="Button2" type="Button" parent="UI/VSplitContainer/HBoxContainer"]
visible = false
margin_left = 52.0
margin_right = 79.0
margin_bottom = 24.0
shortcut = SubResource( 2 )
text = "F5"

[node name="Button5" type="Button" parent="UI/VSplitContainer/HBoxContainer"]
margin_left = 52.0
margin_right = 77.0
margin_bottom = 24.0
shortcut = SubResource( 2 )
text = "<-"

[node name="Button6" type="Button" parent="UI/VSplitContainer/HBoxContainer"]
margin_left = 81.0
margin_right = 106.0
margin_bottom = 24.0
shortcut = SubResource( 2 )
text = "->"

[node name="Button4" type="Button" parent="UI/VSplitContainer/HBoxContainer"]
margin_left = 110.0
margin_right = 130.0
margin_bottom = 24.0
shortcut = SubResource( 2 )
text = "X"

[node name="LineEdit" type="LineEdit" parent="UI/VSplitContainer/HBoxContainer"]
margin_left = 134.0
margin_right = 926.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="UI/VSplitContainer/HBoxContainer"]
margin_left = 930.0
margin_right = 966.0
margin_bottom = 24.0
text = "==>"

[node name="Button3" type="Button" parent="UI/VSplitContainer/HBoxContainer"]
margin_left = 970.0
margin_right = 1024.0
margin_bottom = 24.0
text = "Search"

[node name="TabContainer" type="TabContainer" parent="UI/VSplitContainer"]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="Page" type="RichTextLabel" parent="UI/VSplitContainer/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
focus_mode = 2
selection_enabled = true

[node name="HTML" type="RichTextLabel" parent="UI/VSplitContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
focus_mode = 2
text = "<html></html>"
selection_enabled = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="BingHelp" parent="." instance=ExtResource( 2 )]

[node name="Popup" type="Popup" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[connection signal="pressed" from="UI/VSplitContainer/HBoxContainer/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="UI/VSplitContainer/HBoxContainer/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="UI/VSplitContainer/HBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="text_entered" from="UI/VSplitContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="UI/VSplitContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="UI/VSplitContainer/HBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
